--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -3,9 +3,9 @@
   [navbarBrandFull]="{src: 'assets/img/logo.png', width: 130, height: 30, alt: 'RuTransfers'}"
   [navbarBrandMinimized]="{src: 'assets/favicon.png', width: 30, height: 30, alt: 'RuTransfers'}"
   [sidebarToggler]="'lg'"
-  [asideMenuToggler]="'lg'">
+  [asideMenuToggler]= false> 
   
-</app-header>
+</app-header> 
 
 <div class="app-body">
   <app-sidebar [fixed]="true" [display]="'lg'">
@@ -23,6 +23,17 @@
   
 </div>
 <app-footer>
-  <span><a href="http://www.ru-transfers.com">RuTransfers</a> &copy; 2018</span>
+    
   
+    <span><a href="http://www.ru-transfers.com" target="_blank">RuTransfers</a> &copy; 2018</span>
+    
+        <div class="container">
+            <div class="row">
+              <div class="col-sm">
+           
+              <a mat-icon-button class="btn-facebook" href="https://www.facebook.com/rutransfers.ru/?ref=br_rs" target="_blank"><i class="fa fa-facebook fa-lg"></i></a>
+          </div>
+          </div>
+        </div>
+
 </app-footer>
