--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -25,15 +25,11 @@
 <app-footer>
     
   
-    <span><a href="http://www.ru-transfers.com" target="_blank">RuTransfers</a> &copy; 2018</span>
+    <span><a href="http://www.ru-transfers.com" target="_blank">RuTransfers</a> &copy; 2018.      <a mat-icon-button class="btn-facebook" href="https://www.facebook.com/rutransfers.ru/?ref=br_rs" target="_blank"><i class="fa fa-facebook fa-lg"></i></a></span>
     
-        <div class="container">
-            <div class="row">
-              <div class="col-sm">
-           
-              <a mat-icon-button class="btn-facebook" href="https://www.facebook.com/rutransfers.ru/?ref=br_rs" target="_blank"><i class="fa fa-facebook fa-lg"></i></a>
-          </div>
-          </div>
-        </div>
-
+   
+    
+          
+        
+        
 </app-footer>
