--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,11 +1,6 @@
 <div class="animated fadeIn">
-  <div class="row">
-    
-          
-  </div><!--/.row-->
+  
 
-  
-  
   <!--/.card-->
   <div class="row">
     <div class="col-sm-6 col-lg-3">
@@ -59,30 +54,65 @@
           </div>
         </div>
       </div>
+        
     </div><!--/.col-->
     
   </div><!--/.row-->   
   <div class="row">
-      <div class="col-sm-6 col-lg-3">
-  <div class="card" style="width: 18rem;">
-      <img class="card-img-top" src="../../../assets/img/panoramico.jpg" alt="Card image cap">
+     
+  <div class="card" style="width: 300px;height: 600px">
+      <img class="card-img-top" style="width: 300px;height: 250px" src="../../../assets/img/pedroypablonoche.jpg" alt="Card image cap">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Quick sample text to create the card title and make up the body of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
+        <h5 class="card-title">Experiencia</h5>
+        <p class="card-text">RuTransfers es una empresa certificada como Tour Operators por el gobierno Ruso (MBT 015124 ) que brinda excursiones en Rusia, ofreciendo tours en Moscú y en San Petersburgo. Es formada por un grupo de hispanohablantes con experiencia de más de 20 años viviendo en Rusia. Nuestra misión es que usted disfrute su estancia en Rusia sin contratiempos y sin sorpresas, con el mejor trato y servicio de todo nuestro equipo corporativo. </p>
+        
+      
     </div>
     </div>
-    <div class="col-sm-6 col-lg-3">
-    <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="../../../assets/img/panoramico.jpg" alt="Card image cap">
+    <div class="row">
+    
+    <div class="card" style="width: 300px;height: 600px;">
+        <img class="card-img-top" style="width: 300px;height: 250px" src="../../../assets/img/palaciodecaterina.jpg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Quick sample text to create the card title and make up the body of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Guías Certificados en español</h5>
+          <p class="card-text">Nuestro equipo de guías certificados por el Ministerio de Turismo y nuestros choferes, le darán un servicio excepcional en sus excursiones en Rusia ya sea en alguno de nuestros tours en Moscú y en San Petersburgo además le compartirán su profundo conocimiento de Rusia para que conozca la historia y cultura de este país en su idioma. </p>
+         
+        
         </div>
       </div>
     </div><!--row-->
 </div>
 
   </div>
+
+
+
+  
+    <div class="row">
+      <div class="col-sm-6 col-lg-3">
+        <div class="brand-card">
+          <div class="brand-card-header bg-google-plus">
+            <i class="fa fa-dollar"></i>
+            <div class="chart-wrapper">
+              <canvas baseChart class="chart"
+              [datasets]="brandBoxChartData3"
+              [labels]="brandBoxChartLabels"
+              [options]="brandBoxChartOptions"
+              [colors]="brandBoxChartColours"
+              [legend]="brandBoxChartLegend"
+              [chartType]="brandBoxChartType"></canvas>
+            </div>
+          </div>
+          <div class="brand-card-body">
+            <div>
+              <div class="text-value">Curso del dólar</div>
+              
+            </div>
+            <div>
+              <div class="text-value">65.55 Rub </div>
+              
+            </div>
+          </div>
+      
+          
+  </div><!--/.row-->
