--- a/src/app/views/base/collapses.component.html
+++ b/src/app/views/base/collapses.component.html
@@ -2,11 +2,11 @@
   <div class="card">
     <div class="card-header" (click)="isCollapsed1 = !isCollapsed1">
       <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-        <h5>Día 1. Moscú panorámica. Salida del hotel: 9 am</h5>
+        <h5>Día 1. Moscú panorámica.<br> Salida del hotel: 9 am</h5>
       </button>
       <div class="card-header-actions">
         <a href="https://valor-software.com/ngx-bootstrap/#/collapse" target="_blank">
-          <small className="text-muted">docs</small>
+          
         </a>
       </div>
     </div>
@@ -30,11 +30,11 @@
   <div class="card">
     <div class="card-header" (click)="isCollapsed2 = !isCollapsed2">
       <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-        <h5>Día 2. Moscú típico. Salida del hotel: 9 am</h5>
+        <h5>Día 2. Moscú típico. <br>Salida del hotel: 9 am</h5>
       </button>
       <div class="card-header-actions">
         <a href="https://valor-software.com/ngx-bootstrap/#/collapse" target="_blank">
-          <small className="text-muted">docs</small>
+          
         </a>
       </div>
     </div>
@@ -56,11 +56,11 @@
   <div class="card">
     <div class="card-header" (click)="isCollapsed3 = !isCollapsed3">
       <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-        <h5>Día 3. Moscú acuático. Salida del hotel: 10 am</h5>
+        <h5>Día 3. Moscú acuático.<br> Salida del hotel: 10 am</h5>
       </button>
       <div class="card-header-actions">
         <a href="https://valor-software.com/ngx-bootstrap/#/collapse" target="_blank">
-          <small className="text-muted">docs</small>
+          
         </a>
       </div>
     </div>
